clusters/talos-ottawa/apps/media/app/sonarr-anime/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr-anime
spec:
  replicas: 0
  selector:
    matchLabels:
      app: sonarr-anime
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr-anime
    spec:
      containers:
        - name: sonarr-anime
          image: lscr.io/linuxserver/sonarr:latest
          ports:
            - name: http
              containerPort: 8989
              protocol: TCP
          volumeMounts:
            - name: tv-volume
              mountPath: /tv
            - name: downloads-sabnzbd-volume
              mountPath: /downloads/sabnzbd
            - name: downloads-qbittorrent-volume
              mountPath: /downloads/qbittorrent
            - name: config-volume
              mountPath: /config
      volumes:
        - name: tv-volume
          persistentVolumeClaim:
            claimName: sonarr-anime-tv
        - name: downloads-sabnzbd-volume
          persistentVolumeClaim:
            claimName: sabnzbd-media
        - name: downloads-qbittorrent-volume
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
        - name: config-volume
          persistentVolumeClaim:
            claimName: sonarr-anime-config
