clusters/talos-ottawa/apps/media/app/sonarr-anime/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-anime
spec:
  selector:
    app: sonarr-anime
  ports:
  - name: http
    port: 8989
    protocol: TCP
    targetPort: 8989
  type: ClusterIP
